--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                         </ul>
                     </li>
                     <li>
-                        <label for="drop-4" class="toggle"> Arpita Agarbathi</label>
-                        <a href="#"> Arpita Agarbathi</a>
+                        <label for="drop-4" class="toggle"> Archita Agarbatti</label>
+                        <a href="#"> Archita Agarbatti</a>
                         <input type="checkbox" id="drop-4" />
                         <ul>
                            <li>
-                             <label for="drop-5" class="toggle"> Agarbathi Rs.5</label>
-                             <a href="#"> Arpita Rs.5 </a>
+                             <label for="drop-5" class="toggle"> Archita Agarbatti Rs.5</label>
+                             <a href="#"> Archita Agarbatti Rs.5 </a>
                              <input type="checkbox" id="drop-5" />
                              <ul>
                                <li><a href="javascript:void(0);" id="modalLink9" onClick="openModal(9)">Bharatwasi</a></li>
@@ -146,8 +146,8 @@
                              </ul>
                             </li>
                             <li>
-                              <label for="drop-6" class="toggle"> Agarbathi Rs.10</label>
-                              <a href="#"> Arpita Rs.10</a>
+                              <label for="drop-6" class="toggle"> Archita Agarbatti Rs.10</label>
+                              <a href="#"> Archita Agarbatti Rs.10</a>
                               <input type="checkbox" id="drop-6" />
                               <ul>
                                 <li><a href="javascript:void(0);" id="modalLink13" onClick="openModal(13)">Bharatwasi</a></li>
@@ -158,8 +158,8 @@
                               </ul>
                             </li>
                             <li>
-                                <label for="drop-7" class="toggle"> Dhoop Agarbathi Rs.5</label>
-                                <a href="#"> Arpita Dhoop Agarbathi Rs.5</a>
+                                <label for="drop-7" class="toggle"> Archita Dhoop Agarbatti Rs.5</label>
+                                <a href="#"> Archita Dhoop Agarbatti Rs.5</a>
                                 <input type="checkbox" id="drop-7" />
                                 <ul>
                                   <li><a href="javascript:void(0);" id="modalLink18" onClick="openModal(18)">Herbal Dhoop</a></li>
@@ -168,8 +168,8 @@
                                 </ul>
                             </li>
                             <li>
-                                <label for="drop-8" class="toggle"> Dhoop Agarbathi Rs.10</label>
-                                <a href="#"> Arpita Dhoop Agarbathi Rs.10</a>
+                                <label for="drop-8" class="toggle"> Archita Dhoop Agarbatti Rs.10</label>
+                                <a href="#"> Archita Dhoop Agarbatti Rs.10</a>
                                 <input type="checkbox" id="drop-8" />
                                 <ul>
                                   <li><a href="javascript:void(0);" id="modalLink21" onClick="openModal(21)">Herbal Dhoop</a></li>
@@ -178,8 +178,8 @@
                                 </ul>
                             </li>
                             <li>
-                                <label for="drop-9" class="toggle"> Dhoop Agarbathi Rs.20</label>
-                                <a href="#"> Arpita Dhoop Agarbathi Rs.20</a>
+                                <label for="drop-9" class="toggle"> Archita Dhoop Agarbatti Rs.20</label>
+                                <a href="#"> Archita Dhoop Agarbatti Rs.20</a>
                                 <input type="checkbox" id="drop-9" />
                                 <ul>
                                   <li><a href="javascript:void(0);" id="modalLink24" onClick="openModal(24)">Guldasta </a></li>
@@ -310,7 +310,7 @@
                 <span class="close" onClick="closeModal(9)">&times;</span>
 
                 <h1>Bharatwasi</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbatti</p>
                 <img src="assets/img/archita-agarbathi/agarbathi-5rs/archita-bharatwasi-5.jpeg" class="modal-img">
             </div>
         </div>
@@ -321,7 +321,7 @@
                 <span class="close" onClick="closeModal(10)">&times;</span>
 
                 <h1>Herbal Dhoop</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/agarbathi-5rs/archita-herbal-dhoop-5.jpeg" class="modal-img">
             </div>
         </div>
@@ -332,7 +332,7 @@
                 <span class="close" onClick="closeModal(11)">&times;</span>
 
                 <h1>Pavitra</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/agarbathi-5rs/archita-pavitra-5rs.jpeg" class="modal-img">
             </div>
         </div>
@@ -343,7 +343,7 @@
                 <span class="close" onClick="closeModal(12)">&times;</span>
 
                 <h1>Herbal Dhoop</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/agarbathi-5rs/archita-guldasta-rs5.jpeg" class="modal-img">
             </div>
         </div>
@@ -354,7 +354,7 @@
                 <span class="close" onClick="closeModal(13)">&times;</span>
 
                 <h1>Bharatwasi</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/agarbathi-10rs/archita-bharatwasi.jpeg" class="modal-img">
             </div>
         </div>
@@ -365,7 +365,7 @@
                 <span class="close" onClick="closeModal(14)">&times;</span>
 
                 <h1>Gulab</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/agarbathi-10rs/archita-gulab.jpeg" class="modal-img">
             </div>
         </div>
@@ -376,7 +376,7 @@
                 <span class="close" onClick="closeModal(15)">&times;</span>
 
                 <h1>Inayaat</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/agarbathi-10rs/archita-inayaat.jpeg" class="modal-img">
             </div>
         </div>
@@ -387,7 +387,7 @@
                 <span class="close" onClick="closeModal(16)">&times;</span>
 
                 <h1>Guldasta 4 in 1</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/agarbathi-10rs/archita-guldasta-4-in-1.jpeg" class="modal-img">
             </div>
         </div>
@@ -398,7 +398,7 @@
                 <span class="close" onClick="closeModal(17)">&times;</span>
 
                 <h1>Arpan</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/agarbathi-10rs/arpan.jpeg" class="modal-img">
             </div>
         </div>
@@ -409,7 +409,7 @@
                 <span class="close" onClick="closeModal(18)">&times;</span>
 
                 <h1>Herbal Dhoop</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/dhoop-agarbathi-5rs/archita-herbal-dhoop-5.jpeg" class="modal-img">
             </div>
         </div>
@@ -420,7 +420,7 @@
                 <span class="close" onClick="closeModal(19)">&times;</span>
 
                 <h1>Mogra</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/dhoop-agarbathi-5rs/archita-mogra-5rs.jpeg" class="modal-img">
             </div>
         </div>
@@ -431,7 +431,7 @@
                 <span class="close" onClick="closeModal(20)">&times;</span>
 
                 <h1>Rose</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/dhoop-agarbathi-5rs/archita-rose-5rs.jpeg" class="modal-img">
             </div>
         </div>
@@ -442,8 +442,8 @@
                 <span class="close" onClick="closeModal(21)">&times;</span>
 
                 <h1>Herbal Dhoop</h1>
-                <p>Arpita Agarbathi</p>
-                <img src="assets/img/archita-agarbathi/dhoop-agarbathi-10rs/arpita-herbal-dhoop.jpeg" class="modal-img">
+                <p>Archita Agarbathi</p>
+                <img src="assets/img/archita-agarbathi/dhoop-agarbathi-10rs/Archita-herbal-dhoop.jpeg" class="modal-img">
             </div>
         </div>
         <div id="modal22" class="modal">
@@ -453,7 +453,7 @@
                 <span class="close" onClick="closeModal(22)">&times;</span>
 
                 <h1>Mogra</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/dhoop-agarbathi-10rs/archita-mogra-dhoop.jpeg" class="modal-img">
             </div>
         </div>
@@ -464,8 +464,8 @@
                 <span class="close" onClick="closeModal(23)">&times;</span>
 
                 <h1>Pride</h1>
-                <p>Arpita Agarbathi</p>
-                <img src="assets/img/archita-agarbathi/dhoop-agarbathi-10rs/arpita-pride.jpeg" class="modal-img">
+                <p>Archita Agarbathi</p>
+                <img src="assets/img/archita-agarbathi/dhoop-agarbathi-10rs/Archita-pride.jpeg" class="modal-img">
             </div>
         </div>
         <div id="modal24" class="modal">
@@ -475,7 +475,7 @@
                 <span class="close" onClick="closeModal(24)">&times;</span>
 
                 <h1>Guldasta</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/dhoop-agarbathi-20rs/archita-guldasta-dhoop-20.jpeg" class="modal-img">
             </div>
         </div>
@@ -486,7 +486,7 @@
                 <span class="close" onClick="closeModal(25)">&times;</span>
 
                 <h1>Mogra</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/dhoop-agarbathi-20rs/archita-mogra-dhoop-20.jpeg" class="modal-img">
             </div>
         </div>
@@ -497,7 +497,7 @@
                 <span class="close" onClick="closeModal(26)">&times;</span>
 
                 <h1>Saatvik</h1>
-                <p>Arpita Agarbathi</p>
+                <p>Archita Agarbathi</p>
                 <img src="assets/img/archita-agarbathi/dhoop-agarbathi-20rs/archita-saatvik-dhoop-20.jpeg" class="modal-img">
             </div>
         </div>
