--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="hideable">
         <!-- social icons goes here -->
         <ul class="nav">
           <li class="navlink">
@@ -35,13 +35,13 @@
         <!-- Logo Goes here  -->
         <img class="brand-logo" src="assets/img/logo.jpg" />
       </div>
-      <div>
+      <div class="hideable">
         <!-- Contact  information goes here-->
         <h3>Contact Us</h3>
         <p>+91 7780011796</p>
         <p>+91 9097360099</p>
       </div>
-      <div>
+      <div class="hideable">
         <h3>Follow us :</h3>
         <ul class="nav">
           <li class="navlink">
@@ -586,15 +586,36 @@
             <p>Gola Bazar, Sonpur</p>
             <p>Saran - 841101</p>
             <p>Bihar, India</p>
-            <h2>Email :</h2>
-            <p>sujeetkiranastore.sonpur@gmail.com</p>
+            <h2>Contact Us :</h2>
+            <p>Email : <a href="mailto:sujeetkiranastore.sonpur@gmail.com">sujeetkiranastore.sonpur@gmail.com</a></p>
             <p>Phone Number :</p>
             <p>+91 7780011796, +91 9097360099</p>
           </div>
         </div>
       </section>
     </div>
+
     <footer>
+        <div class="hideable-desktop">
+            <h3>Follow us :</h3>
+            <ul class="nav">
+              <li class="navlink">
+                <a class="social-icons" target="_blank" href="https://www.facebook.com/sujeetkiranastore">
+                  <i class="icon-social-facebook icons"></i>
+                </a>
+              </li>
+              <li class="navlink">
+                <a class="social-icons" target="_blank" href="https://instagram.com/sujeetkiranastore">
+                  <i class="icon-social-instagram icons"></i>
+                </a>
+              </li>
+              <li class="navlink">
+                <a class="social-icons" href="mailto:sujeetkiranastore.sonpur@gmail.com">
+                  <i class="icon-envelope icons"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         <p> All Rights Reserved 2020. Sujeet Kirana Store</p>
     </footer>
     <script src="assets/js/main.js"></script>
