--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                              <input type="checkbox" id="drop-5" />
                              <ul>
                                <li><a href="javascript:void(0);" id="modalLink9" onClick="openModal(9)">Bharatwasi</a></li>
-                               <li><a href="javascript:void(0);" id="modalLink10" onClick="openModal(10)">Herbal Dhoop</a></li>
+                               <!-- <li><a href="javascript:void(0);" id="modalLink10" onClick="openModal(10)">Herbal Dhoop</a></li> -->
                                <li><a href="javascript:void(0);" id="modalLink11" onClick="openModal(11)">Pavitra</a></li>
                                <li><a href="javascript:void(0);" id="modalLink12" onClick="openModal(12)">Guldasta</a></li>
                              </ul>
