--- a/index.html
+++ b/index.html
@@ -189,6 +189,32 @@
                             </li>
                         </ul>
                     </li>
+
+<!-- - Pasta ( Rs 2 )
+- Kabab ( Rs 2 )
+- Chowmin ( Rs 5 )
+- Pasta ( Rs 5 )
+- Motu Patlu ( Rs 5 )
+- Balveer ( Rs 5 )
+- Mukhiya Mantri Ji Namkeen ( Rs 5 )
+- Chatori ( Rs 5 )
+- Rings ( Rs 5 ) -->
+                    <li>
+                        <label for="drop-12" class="toggle">Gopi's Namkeen</label>
+                        <a href="#">Gopi's Namkeen</a>
+                        <input type="checkbox" id="drop-10" />
+                        <ul>
+                           <li><a href="javascript:void(0);" id="modalLink34" onClick="openModal(34)"> Pasta ( Rs 2 ) </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink35" onClick="openModal(35)"> Kabab ( Rs 2 )</a></li>
+                           <li><a href="javascript:void(0);" id="modalLink36" onClick="openModal(36)"> Chowmin ( Rs 5 )</a> </li>
+                           <li><a href="javascript:void(0);" id="modalLink37" onClick="openModal(37)"> Pasta ( Rs 5 ) </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink38" onClick="openModal(38)"> Motu Patlu ( Rs 5 )</a></li>
+                           <li><a href="javascript:void(0);" id="modalLink39" onClick="openModal(39)"> Balveer ( Rs 5 )</a> </li>
+                           <li><a href="javascript:void(0);" id="modalLink40" onClick="openModal(40)"> Mukhiya Mantri Ji Namkeen ( Rs 5 ) </a> </li>
+                           <li><a href="javascript:void(0);" id="modalLink41" onClick="openModal(41)"> Chatori ( Rs 5 ) </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink42" onClick="openModal(42)"> Rings ( Rs 5 )</a></li>
+                        </ul>
+                    </li>
                      <li>
                         <a href="#"> Other Products</a>
                         <!-- <ul>
@@ -524,17 +550,125 @@
                 <img src="assets/img/satyendra-food/satyendra-traditional-satoo-200gm/satyendra-traditional-satoo-200gm.jpeg" class="modal-img">
             </div>
         </div>
-        <div id="modal33" class="modal">
-            <!-- modal content-->
-            <div class="modal-content">
-                <!-- The close button-->
-                <span class="close" onClick="closeModal(33)">&times;</span>
+          <div id="modal33" class="modal">
+              <!-- modal content-->
+              <div class="modal-content">
+                  <!-- The close button-->
+                  <span class="close" onClick="closeModal(33)">&times;</span>
 
-                <h1>Dalia 500gm</h1>
-                <p>Satyendra Food</p>
-                <img src="assets/img/satyendra-food/satyendra-dalia-500gm/satyendra-dalia-500gm.jpeg" class="modal-img">
-            </div>
+                  <h1>Dalia 500gm</h1>
+                  <p>Satyendra Food</p>
+                  <img src="assets/img/satyendra-food/satyendra-dalia-500gm/satyendra-dalia-500gm.jpeg" class="modal-img">
+              </div>
+          </div>
+          <div id="modal34" class="modal">
+              <!-- modal content -->
+                <div class="modal-content">
+
+                        <!-- The close button -->
+                        <span class="close" onClick="closeModal(34)">&times;</span>
+
+                        <h1>Pasta Rs.2 </h1>
+                        <p> Gopi's Namkeen</p>
+                        <img src="assets/img/gopis-namkeen/pasta-2rs.jpeg" class="modal-img">
+                  </div>
+         </div>
+        <div id="modal35" class="modal">
+            <!-- modal content -->
+              <div class="modal-content">
+
+                      <!-- The close button -->
+                      <span class="close" onClick="closeModal(35)">&times;</span>
+
+                      <h1>Kabab ( Rs 2 )</h1>
+                      <p> Gopi's Namkeen</p>
+                      <img src="assets/img/gopis-namkeen/kabab-2rs.jpeg" class="modal-img">
+                </div>
         </div>
+         <div id="modal36" class="modal">
+          <!-- modal content -->
+            <div class="modal-content">
+
+                    <!-- The close button -->
+                    <span class="close" onClick="closeModal(36)">&times;</span>
+
+                    <h1> Chowmin ( Rs 5 ) </h1>
+                    <p> Gopi's Namkeen</p>
+                    <img src="assets/img/gopis-namkeen/chowmin-2rs.jpeg" class="modal-img">
+              </div>
+         </div>
+         <div id="modal37" class="modal">
+        <!-- modal content -->
+          <div class="modal-content">
+
+                  <!-- The close button -->
+                  <span class="close" onClick="closeModal(37)">&times;</span>
+
+                  <h1> Pasta ( Rs 5 )</h1>
+                  <p>  Gopi's Namkeen </p>
+                  <img src="assets/img/gopis-namkeen/pasta-5rs.jpeg" class="modal-img">
+            </div>
+      </div>
+       <div id="modal38" class="modal">
+      <!-- modal content -->
+        <div class="modal-content">
+
+                <!-- The close button -->
+                <span class="close" onClick="closeModal(38)">&times;</span>
+
+                <h1> Motu Patlu ( Rs 5 ) </h1>
+                <p>  Gopi's Namkeen </p>
+                <img src="assets/img/gopis-namkeen/motu-patlu-5rs.jpeg" class="modal-img">
+          </div>
+       </div>
+      <div id="modal39" class="modal">
+      <!-- modal content -->
+        <div class="modal-content">
+
+                <!-- The close button -->
+                <span class="close" onClick="closeModal(39)">&times;</span>
+
+                <h1> Balveer ( Rs 5 ) </h1>
+                <p> Gopi's Namkeen</p>
+                <img src="assets/img/gopis-namkeen/balveer-5rs.jpeg" class="modal-img">
+          </div>
+     </div>
+     <div id="modal40" class="modal">
+      <!-- modal content -->
+        <div class="modal-content">
+
+                <!-- The close button -->
+                <span class="close" onClick="closeModal(40)">&times;</span>
+
+                <h1> Mukhiya Mantri Ji Namkeen ( Rs 5 ) </h1>
+                <p> Gopi's Namkeen </p>
+                <img src="assets/img/gopis-namkeen/mantriji-5rs.jpeg" class="modal-img">
+          </div>
+     </div>
+    <div id="modal41" class="modal">
+      <!-- modal content -->
+        <div class="modal-content">
+
+                <!-- The close button -->
+                <span class="close" onClick="closeModal(41)">&times;</span>
+
+                <h1>Chatori ( Rs 5 ) </h1>
+                <p>  Gopi's Namkeen </p>
+                <img src="assets/img/gopis-namkeen/chatori-5rs.jpeg" class="modal-img">
+          </div>
+      </div>
+     <div id="modal42" class="modal">
+      <!-- modal content -->
+        <div class="modal-content">
+
+                <!-- The close button -->
+                <span class="close" onClick="closeModal(42)">&times;</span>
+
+                <h1> Rings ( Rs 5 )</h1>
+                <p> Gopi's Namkeen </p>
+                <img src="assets/img/gopis-namkeen/rings-5rs.jpeg" class="modal-img">
+          </div>
+     </div>
       </section>
       <section id="home">
         <h1 class="section-title">Best Products @ Best Price</h1>
@@ -543,7 +677,7 @@
                 <ol>
                   <li>
                     <img src="assets/img/slides/1597491969048_703686.jpeg">
-                    <div class="ism-caption ism-caption-0">Rajendra Masala</div>
+                    <div class="ism-caption ism-caption-0">Sky Surf</div>
                   </li>
                   <li>
                     <img src="assets/img/slides/1597492042417_91923.jpeg">
@@ -559,7 +693,11 @@
                   </li>
                   <li>
                     <img src="assets/img/slides/1597492854002_154873.jpeg">
-                    <div class="ism-caption ism-caption-0">Archita</div>
+                    <div class="ism-caption ism-caption-0">Archita Agarbatti</div>
+                  </li>
+                  <li>
+                    <img src="assets/img/slides/1597492854002_154874.jpeg">
+                    <div class="ism-caption ism-caption-0">Gopi's Namkeen</div>
                   </li>
                 </ol>
               </div>
@@ -571,7 +709,7 @@
                 <h1 class="section-title">About Us</h1>
                     <p class="section-description">
                         Sujeet Kirana Store - established at 2010 founded by Binod Sah (CEO) and Sujeet Kumar Gupta (Business Development Manager) is a one stop store for all your kirana requirements. <br />
-                        Dealer of : Satyendra Sattoo, Rajendra Masala, Sky Detergent Powder, Sloppy Noodles, Archita
+                        Dealer of : Satyendra Sattoo, Rajendra Masala, Sky Detergent Powder, Sloppy Noodles, Archita Agarbatti
                     </p>
             </div>
         </div>
