--- a/index.html
+++ b/index.html
@@ -189,20 +189,10 @@
                             </li>
                         </ul>
                     </li>
-
-<!-- - Pasta ( Rs 2 )
-- Kabab ( Rs 2 )
-- Chowmin ( Rs 5 )
-- Pasta ( Rs 5 )
-- Motu Patlu ( Rs 5 )
-- Balveer ( Rs 5 )
-- Mukhiya Mantri Ji Namkeen ( Rs 5 )
-- Chatori ( Rs 5 )
-- Rings ( Rs 5 ) -->
                     <li>
                         <label for="drop-12" class="toggle">Gopi's Namkeen</label>
                         <a href="#">Gopi's Namkeen</a>
-                        <input type="checkbox" id="drop-10" />
+                        <input type="checkbox" id="drop-12" />
                         <ul>
                            <li><a href="javascript:void(0);" id="modalLink34" onClick="openModal(34)"> Pasta ( Rs 2 ) </a></li>
                            <li><a href="javascript:void(0);" id="modalLink35" onClick="openModal(35)"> Kabab ( Rs 2 )</a></li>
@@ -224,7 +214,7 @@
                     </li>
                     <!--
                     <li>
-                        <a href="#"> Sky Surf </a>
+                        <a href="#"> Menu </a>
                         <ul>
                             <li><a href="#"> Sub Menu 3-1 </a></li>
                             <li><a href="#"> Sub Menu 3-2 </a></li>
