change responsive menu

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section id="products">
       <div class="products-navbar-container">
           <nav>
-                <label for="drop" class="toggle">Menu</label>
+                <label for="drop" class="toggle">Agency List</label>
                 <input type="checkbox" id="drop" />
                 <ul class="menu">
                     <li>
