dropdown signs mobile

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <section id="products">
       <div class="products-navbar-container">
           <nav>
-                <label for="drop" class="toggle">Agency List</label>
+                <label for="drop" class="toggle" id="menu">Agency List  <span class="icon">&#9776;</span></label>
                 <input type="checkbox" id="drop" />
                 <ul class="menu">
                     <li>
-                        <label for="drop-1" class="toggle">Rajendra Masala</label>
+                        <label for="drop-1" class="toggle dropdown-menu">Rajendra Masala <span class="dropdown-icon">+</span></label>
                         <a href="#">Rajendra Masala</a>
                         <input type="checkbox" id="drop-1" />
                         <ul>
@@ -91,7 +91,7 @@
                         </ul>
                     </li>
                     <li>
-                       <label for="drop-10" class="toggle">Satyendra Foods</label>
+                       <label for="drop-10" class="toggle dropdown-menu">Satyendra Foods <span class="dropdown-icon">+</span></label>
                        <a href="#"> Satyendra Food</a>
                        <input type="checkbox" id="drop-10" />
                        <ul>
@@ -113,12 +113,12 @@
                       -->
                     </li>
                     <li>
-                        <label for="drop-2" class="toggle"> Sloppy Noodles</label>
+                        <label for="drop-2" class="toggle dropdown-menu"> Sloppy Noodles  <span class="dropdown-icon">+</span> </label>
                         <a href="#">Sloppy Noodles</a>
                         <input type="checkbox" id="drop-2" />
                         <ul>
                           <li>
-                            <label for="drop-3" class="toggle"> Masala Noodles</label>
+                            <label for="drop-3" class="toggle dropdown-menu"> Masala Noodles <span class="dropdown-icon">+</span></label>
                             <a href="#"> Masala Noodles</a>
                             <input type="checkbox" id="drop-3" />
                             <ul>
@@ -130,12 +130,12 @@
                         </ul>
                     </li>
                     <li>
-                        <label for="drop-4" class="toggle"> Archita Agarbatti</label>
+                        <label for="drop-4" class="toggle dropdown-menu"> Archita Agarbatti  <span class="dropdown-icon">+</span></label>
                         <a href="#"> Archita Agarbatti</a>
                         <input type="checkbox" id="drop-4" />
                         <ul>
                            <li>
-                             <label for="drop-5" class="toggle"> Archita Agarbatti Rs.5</label>
+                             <label for="drop-5" class="toggle dropdown-menu"> Archita Agarbatti Rs.5  <span class="dropdown-icon">+</span></label>
                              <a href="#"> Archita Agarbatti Rs.5 </a>
                              <input type="checkbox" id="drop-5" />
                              <ul>
@@ -146,7 +146,7 @@
                              </ul>
                             </li>
                             <li>
-                              <label for="drop-6" class="toggle"> Archita Agarbatti Rs.10</label>
+                              <label for="drop-6" class="toggle dropdown-menu"> Archita Agarbatti Rs.10  <span class="dropdown-icon">+</span></label>
                               <a href="#"> Archita Agarbatti Rs.10</a>
                               <input type="checkbox" id="drop-6" />
                               <ul>
@@ -158,7 +158,7 @@
                               </ul>
                             </li>
                             <li>
-                                <label for="drop-7" class="toggle"> Archita Dhoop Agarbatti Rs.5</label>
+                                <label for="drop-7" class="toggle dropdown-menu"> Archita Dhoop Agarbatti Rs.5  <span class="dropdown-icon">+</span></label>
                                 <a href="#"> Archita Dhoop Agarbatti Rs.5</a>
                                 <input type="checkbox" id="drop-7" />
                                 <ul>
@@ -168,7 +168,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <label for="drop-8" class="toggle"> Archita Dhoop Agarbatti Rs.10</label>
+                                <label for="drop-8" class="toggle dropdown-menu"> Archita Dhoop Agarbatti Rs.10  <span class="dropdown-icon">+</span></label>
                                 <a href="#"> Archita Dhoop Agarbatti Rs.10</a>
                                 <input type="checkbox" id="drop-8" />
                                 <ul>
@@ -178,7 +178,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <label for="drop-9" class="toggle"> Archita Dhoop Agarbatti Rs.20</label>
+                                <label for="drop-9" class="toggle dropdown-menu"> Archita Dhoop Agarbatti Rs.20  <span class="dropdown-icon">+</span></label>
                                 <a href="#"> Archita Dhoop Agarbatti Rs.20</a>
                                 <input type="checkbox" id="drop-9" />
                                 <ul>
@@ -190,7 +190,7 @@
                         </ul>
                     </li>
                     <li>
-                        <label for="drop-12" class="toggle">Gopi's Namkeen</label>
+                        <label for="drop-12" class="toggle dropdown-menu">Gopi's Namkeen  <span class="dropdown-icon">+</span></label>
                         <a href="#">Gopi's Namkeen</a>
                         <input type="checkbox" id="drop-12" />
                         <ul>
