--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <input type="checkbox" id="drop-2" />
                         <ul>
                           <li>
-                            <label for="drop-3" class="toggle dropdown-menu"> Masala Noodles <span class="dropdown-icon">+</span></label>
+                            <label for="drop-3" class="toggle dropdown-menu sub-menu"> Masala Noodles <span class="dropdown-icon">+</span></label>
                             <a href="#"> Masala Noodles</a>
                             <input type="checkbox" id="drop-3" />
                             <ul>
@@ -135,7 +135,7 @@
                         <input type="checkbox" id="drop-4" />
                         <ul>
                            <li>
-                             <label for="drop-5" class="toggle dropdown-menu"> Archita Agarbatti Rs.5  <span class="dropdown-icon">+</span></label>
+                             <label for="drop-5" class="toggle dropdown-menu sub-menu"> Archita Agarbatti Rs.5  <span class="dropdown-icon">+</span></label>
                              <a href="#"> Archita Agarbatti Rs.5 </a>
                              <input type="checkbox" id="drop-5" />
                              <ul>
@@ -146,7 +146,7 @@
                              </ul>
                             </li>
                             <li>
-                              <label for="drop-6" class="toggle dropdown-menu"> Archita Agarbatti Rs.10  <span class="dropdown-icon">+</span></label>
+                              <label for="drop-6" class="toggle dropdown-menu sub-menu"> Archita Agarbatti Rs.10  <span class="dropdown-icon">+</span></label>
                               <a href="#"> Archita Agarbatti Rs.10</a>
                               <input type="checkbox" id="drop-6" />
                               <ul>
@@ -158,7 +158,7 @@
                               </ul>
                             </li>
                             <li>
-                                <label for="drop-7" class="toggle dropdown-menu"> Archita Dhoop Agarbatti Rs.5  <span class="dropdown-icon">+</span></label>
+                                <label for="drop-7" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.5  <span class="dropdown-icon">+</span></label>
                                 <a href="#"> Archita Dhoop Agarbatti Rs.5</a>
                                 <input type="checkbox" id="drop-7" />
                                 <ul>
@@ -168,7 +168,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <label for="drop-8" class="toggle dropdown-menu"> Archita Dhoop Agarbatti Rs.10  <span class="dropdown-icon">+</span></label>
+                                <label for="drop-8" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.10  <span class="dropdown-icon">+</span></label>
                                 <a href="#"> Archita Dhoop Agarbatti Rs.10</a>
                                 <input type="checkbox" id="drop-8" />
                                 <ul>
@@ -178,7 +178,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <label for="drop-9" class="toggle dropdown-menu"> Archita Dhoop Agarbatti Rs.20  <span class="dropdown-icon">+</span></label>
+                                <label for="drop-9" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.20  <span class="dropdown-icon">+</span></label>
                                 <a href="#"> Archita Dhoop Agarbatti Rs.20</a>
                                 <input type="checkbox" id="drop-9" />
                                 <ul>
@@ -190,9 +190,9 @@
                         </ul>
                     </li>
                     <li>
-                        <label for="drop-12" class="toggle dropdown-menu">Gopi's Namkeen  <span class="dropdown-icon">+</span></label>
+                        <label for="drop-15" class="toggle dropdown-menu"> Gopi's Namkeen  <span class="dropdown-icon">+</span></label>
                         <a href="#">Gopi's Namkeen</a>
-                        <input type="checkbox" id="drop-12" />
+                        <input type="checkbox" id="drop-15" />
                         <ul>
                            <li><a href="javascript:void(0);" id="modalLink34" onClick="openModal(34)"> Pasta ( Rs 2 ) </a></li>
                            <li><a href="javascript:void(0);" id="modalLink35" onClick="openModal(35)"> Kabab ( Rs 2 )</a></li>
