adding other products

--- a/index.html
+++ b/index.html
@@ -206,21 +206,17 @@
                         </ul>
                     </li>
                      <li>
+                       <label for="drop-16" class="toggle dropdown-menu">Other Products <span class="dropdown-icon">+</span> </label>
                         <a href="#"> Other Products</a>
-                        <!-- <ul>
-                            <li><a href="#"> Sub Menu 2-1 </a></li>
-                            <li><a href="#"> Sub Menu 2-2 </a></li>
-                        </ul> -->
-                    </li>
-                    <!--
-                    <li>
-                        <a href="#"> Menu </a>
+                        <input type="checkbox" id="drop-16" />
                         <ul>
-                            <li><a href="#"> Sub Menu 3-1 </a></li>
-                            <li><a href="#"> Sub Menu 3-2 </a></li>
+                          <li><a href="javascript:void(0);" id="modalLink43" onClick="openModal(43)"> Jali (Scrubber) - Rs.60 /Patta</a></li>
+                          <li><a href="javascript:void(0);" id="modalLink44" onClick="openModal(44)"> Jali (Scrub Pad) - Rs.50 /Patta</a></li>
+                          <li><a href="javascript:void(0);" id="modalLink45" onClick="openModal(45)"> Rasoe Soyabean ( 20kg )</a></li>
+                          <li><a href="javascript:void(0);" id="modalLink46" onClick="openModal(46)"> GJP Soyabean ( 5kg )</a></li>
+                          <li><a href="javascript:void(0);" id="modalLink47" onClick="openModal(47)"> Ganesh Soyabean (Rs.10)</a></li>
                         </ul>
-                    </li> -->
-
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -659,6 +655,69 @@
                 <img src="assets/img/gopis-namkeen/rings-5rs.jpeg" class="modal-img">
           </div>
      </div>
+     <div id="modal43" class="modal">
+        <!-- modal content -->
+          <div class="modal-content">
+
+                  <!-- The close button -->
+                  <span class="close" onClick="closeModal(43)">&times;</span>
+
+                  <h1>Jali (Scrubber) - Rs.60 /Patta</h1>
+                  <p> Other Products</p>
+                  <img src="assets/img/other-products/jali-scrubber.jpeg" class="modal-img">
+            </div>
+       </div>
+       <div id="modal44" class="modal">
+          <!-- modal content -->
+            <div class="modal-content">
+
+                    <!-- The close button -->
+                    <span class="close" onClick="closeModal(44)">&times;</span>
+
+                    <h1> Jali (Scrub Pad) - Rs.50 /Patta</h1>
+                    <p>Other Products </p>
+                    <img src="assets/img/other-products/jali-scrubpad.jpeg" class="modal-img">
+              </div>
+         </div>
+         <div id="modal45" class="modal">
+            <!-- modal content -->
+              <div class="modal-content">
+
+                      <!-- The close button -->
+                      <span class="close" onClick="closeModal(45)">&times;</span>
+
+                      <h1>Rasoe Soyabean ( 20kg )</h1>
+                      <p> Other Products</p>
+                      <img src="assets/img/other-products/rasoe-soyabean/rasoe-soyabean-1.jpeg" class="modal-img">
+                      <img src="assets/img/other-products/rasoe-soyabean/rasoe-soyabean-2.jpeg" class="modal-img">
+                      <img src="assets/img/other-products/rasoe-soyabean/rasoe-soyabean-3.jpeg" class="modal-img">
+                </div>
+           </div>
+           <div id="modal46" class="modal">
+              <!-- modal content -->
+                <div class="modal-content">
+
+                        <!-- The close button -->
+                        <span class="close" onClick="closeModal(46)">&times;</span>
+
+                        <h1>GJP Soyabean ( 5kg )</h1>
+                        <p> Other Products </p>
+                        <img src="assets/img/other-products/gjb-soyabean/gjb-soyabean-1.jpeg" class="modal-img">
+                        <img src="assets/img/other-products/gjb-soyabean/gjb-soyabean-2.jpeg" class="modal-img">
+                  </div>
+             </div>
+             <div id="modal47" class="modal">
+                <!-- modal content -->
+                  <div class="modal-content">
+
+                          <!-- The close button -->
+                          <span class="close" onClick="closeModal(47)">&times;</span>
+
+                          <h1>Ganesh Soyabean ( Rs 10 )</h1>
+                          <p> Other Products </p>
+                          <img src="assets/img/other-products/ganesh-soyabean.jpeg" class="modal-img">
+                    </div>
+               </div>
       </section>
       <section id="home">
         <h1 class="section-title">Best Products @ Best Price</h1>
